--- a/style/style.css
+++ b/style/style.css
@@ -1,66 +1,65 @@
-body {
-    background-color: #EEF9BF;
-    display: flex;
-    justify-content: center;
+*{
+    box-sizing: border-box;
 }
-
-.header-h1 {
-    font-family: Roboto;
-    font-size: 36px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 42px;
-    letter-spacing: -0.004em;
-    text-align: center;
+body{
+    font-family: 'Roboto', sans-serif;
+    background-color: #E5E5E5;
     color: #75B79E;
-    padding: 20px;
-    margin-top: 40px;
 }
-.cards {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    flex-wrap: wrap;
-    margin-top: 10px;
-}
-.card-parrot {
-    height: 145px;
-    width: 120px;
-
+header{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #A7E9AF;
-    border-radius: 5px;
-    margin-top: 30px;
+    width: 100vw;
+    height: 20vh;
+    padding: 0 5vw;
+    font-size: 56px;
+    font-weight: 700;
+    text-align: center;
 }
-.card-parrot img{
-    height: 100px;
-    width: 100px;
+main{
+    width: 70vw;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
-@media (min-width: 950px){
-    body {
-        width: 100%;
-        height: 100%;
-    }
-    .header-h1{
-        font-size: 56px;
+.card{
+    width: 117px;
+    height: 146px;
+    margin: 0 15px 30px ;
 
-    }
-    .cards {
-        width: 50%;
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        flex-wrap: wrap;
-        padding: 10px;
-    }
-    .card-parrot {
-        margin-left: 10px;
-        margin-right: 10px;
-    }
-    .container-center {
-        display: flex;
-        justify-content: center;
+    position: relative;
+}
+.face img{
+    width: 100px;
+    height: 100px;
+}
+.face {
+    background-color: #A7E9AF;
+    border: 1px solid #99CEA8;
+    border-radius: 5px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    backface-visibility: hidden;
+    transition: all .5s;
+    transform-style: preserve-3d;
+}
+.back-face {
+    transform: rotateY(180deg);
+}
+.card.turned .back-face {
+    transform: rotateY(0deg);
+}
+.card.turned .front-face {
+    transform: rotateY(-180deg);
+}
+@media (max-width: 600px) {
+    header h1{
+        font-size: 36px;
     }
 }
